--- a/src/main/resources/fragments/footer.html
+++ b/src/main/resources/fragments/footer.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
+
+<body>
+<footer th:fragment="footer">
+    <p><span>@Mottu - 2025</span></p>
+</footer>
 </body>
+
 </html>
