--- a/src/main/resources/fragments/header.html
+++ b/src/main/resources/fragments/header.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
 <body>
-
+<header>
+    <div>
+        <div>
+            MottuFind
+        </div>
+        <nav>
+            <a th:href="@{/}">Home</a>
+            <a th:href="@{/web/patios}">Pátios</a>
+            <a th:href="@{/web/motos}">Motos</a>
+            <a th:href="@{/web/filiais}">Filiais</a>
+        </nav>
+    </div>
+</header>
 </body>
 </html>
