--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
+    <div th:insert="~{fragments/header :: header}">
+        MENU
+    </div>
 
+
+    <div th:insert="~{fragments/footer :: footer}">
+        @ 2025 MOTTU
+    </div>
 </body>
 </html>
