--- a/src/main/resources/fragments/header.html
+++ b/src/main/resources/fragments/header.html
@@ -8,9 +8,9 @@
         </div>
         <nav>
             <a th:href="@{/}">Home</a>
-            <a th:href="@{/web/patios}">Pátios</a>
-            <a th:href="@{/web/motos}">Motos</a>
-            <a th:href="@{/web/filiais}">Filiais</a>
+            <a th:href="@{/patios}">Pátios</a>
+            <a th:href="@{/motos}">Motos</a>
+            <a th:href="@{/filiais}">Filiais</a>
         </nav>
     </div>
 </header>
