--- a/src/main/resources/fragments/header.html
+++ b/src/main/resources/fragments/header.html
@@ -7,7 +7,7 @@
             MottuFind
         </div>
         <nav>
-            <a th:href="@{/}">Home</a>
+            <a th:href="@{/home}">Home</a>
             <a th:href="@{/patios}">Pátios</a>
             <a th:href="@{/motos}">Motos</a>
             <a th:href="@{/filiais}">Filiais</a>
