--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
-
+<html xmlns:th="http://www.thymeleaf.org">
+<head></head>
 <body>
-<footer th:fragment="footer">
-    <p><span>@Mottu - 2025</span></p>
-</footer>
+<th:block th:fragment="footer">
+    <footer>
+        <p>&copy; 2025 Mottu - Todos os direitos reservados</p>
+    </footer>
+</th:block>
 </body>
-
 </html>
