--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Home - Mottu</title>
+    <link rel="stylesheet" th:href="@{/assets/css/global-styles.css}">
 </head>
 <body>
-    <div th:insert="~{fragments/header :: header}">
-        MENU
-    </div>
+<header th:replace="fragments/header :: header"></header>
 
+<div class="container">
+    <h2>Bem-vindo à Plataforma Mottu</h2>
+    <p>Gerencie Filiais, Pátios e Motos de forma simples e moderna.</p>
+    <a class="btn" th:href="@{/filiais}">Ver Filiais</a>
+</div>
 
-    <div th:insert="~{fragments/footer :: footer}">
-        @ 2025 MOTTU
-    </div>
+<footer th:replace="fragments/footer :: footer"></footer>
 </body>
 </html>
