--- a/src/main/resources/templates/motos/form.html
+++ b/src/main/resources/templates/motos/form.html
@@ -3,47 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Cadastro de Motos</title>
+    <link rel="stylesheet" th:href="@{/assets/css/global-styles.css}" />
 </head>
 <body>
-<div th:replace="fragments/header :: header"></div>
+<header th:replace="fragments/header :: header"></header>
 
 <!-- <h1 th:text="${#fields.hasErrors()} ? 'Corrija os erros abaixo' : ( ${moto.placa} != null ? 'Editar Moto' : 'Nova Moto')"></h1> -->
 
-<form th:action="@{/motos/salvar}" method="post" th:object="${moto}">
+<div class="container">
+    <h2 th:text="${moto?.placa} != null ? 'Editar Moto' : 'Nova Moto'"></h2>
+    <form th:action="@{/motos/salvar}" method="post" th:object="${moto}">
+
+        <div>
+            <label for="modelo">Modelo:</label>
+            <input type="text" id="modelo" th:field="*{modelo}" required>
+            <span th:if="${#fields.hasErrors('modelo')}" th:errors="*{modelo}"></span>
+            <!-- -->
+        </div>
+
+        <div>
+            <label for="marca">Marca:</label>
+            <input type="text" id="marca" th:field="*{marca}" required>
+            <span th:if="${#fields.hasErrors('marca')}" th:errors="*{marca}"></span>
+            <!-- -->
+        </div>
+
+        <div>
+            <label for="status">Status:</label>
+            <input type="text" id="status" th:field="*{status}">
+            <span th:if="${#fields.hasErrors('status')}" th:errors="*{status}"></span>
+            <!-- -->
+        </div>
+
+        <div>
+            <button type="submit">Salvar</button>
+            <a th:href="@{/motos}">Cancelar</a>
+        </div>
+
+    </form>
+</div>
 
 
 
-    <div>
-        <label for="modelo">Modelo:</label>
-        <input type="text" id="modelo" th:field="*{modelo}" required>
-        <!--<span th:errors="*{modelo}"></span>-->
-        <!-- th:if="${#fields.hasErrors('modelo')}"-->
-    </div>
-
-
-
-
-    <div>
-        <label for="marca">Marca:</label>
-        <input type="text" id="marca" th:field="*{marca}" required>
-        <!--<span th:errors="*{marca}"></span>-->
-        <!-- th:if="${#fields.hasErrors('marca')}"-->
-    </div>
-
-
-    <div>
-        <label for="status">Status:</label>
-        <input type="text" id="status" th:field="*{status}">
-        <!--<span th:errors="*{status}"></span>-->
-        <!-- th:if="${#fields.hasErrors('status')}"-->
-    </div>
-
-    <div>
-        <button type="submit">Salvar</button>
-        <a th:href="@{/motos}">Cancelar</a>
-    </div>
-</form>
-
-<div th:replace="fragments/footer :: footer"></div>
+<footer th:replace="fragments/footer :: footer"></footer>
 </body>
 </html>
