--- a/src/main/resources/templates/patios/index.html
+++ b/src/main/resources/templates/patios/index.html
@@ -3,38 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Lista de Patios</title>
+    <link rel="stylesheet" th:href="@{/assets/css/global-styles.css}" />
 </head>
 <body>
-<div th:replace="fragments/header :: header"></div>
+<header th:replace="fragments/header :: header"></header>
 
-<h1>Lista de Patios</h1>
+<div class="container">
+    <h1>Lista de Patios</h1>
 
-<a th:href="@{/patios/novo}">+ Novo Patio</a>
+    <a class="btn" th:href="@{/patios/novo}">+ Novo Patio</a>
 
-<table border="1" cellpadding="8" cellspacing="0">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Nome</th>
-        <th>Largura</th>
-        <th>Comprimento</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="patio : ${patios}">
-        <td th:text="${patio.id}"></td>
-        <td th:text="${patio.nome}"></td>
-        <td th:text="${patio.largura}"></td>
-        <td th:text="${patio.comprimento}"></td>
-        <td>
-            <a th:href="@{|/patios/${patio.id}|}">Ver</a> |
-            <a th:href="@{|/patios/${patio.id}/editar|}">Editar</a> |
-            <a th:href="@{|/patios/${patio.id}/deletar|}">Excluir</a>
-        </td>
-    </tr>
-    </tbody>
-</table>
+    <table border="1" cellpadding="8" cellspacing="0">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nome</th>
+            <th>Largura</th>
+            <th>Comprimento</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="patio : ${patios}">
+            <td th:text="${patio.id}"></td>
+            <td th:text="${patio.nome}"></td>
+            <td th:text="${patio.largura}"></td>
+            <td th:text="${patio.comprimento}"></td>
+            <td>
+                <a class="btn" th:href="@{|/patios/${patio.id}/editar|}">Editar</a> |
+                <a class="btn" th:href="@{|/patios/${patio.id}/deletar|}">Excluir</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
-<div th:replace="fragments/footer :: footer"></div>
+
+<footer th:replace="fragments/footer :: footer"></footer>
 </body>
 </html>
