--- a/src/main/resources/templates/filiais/index.html
+++ b/src/main/resources/templates/filiais/index.html
@@ -30,7 +30,7 @@
             <td th:text="${filial.pais}"></td>
             <td>
                 <a class="btn" th:href="@{|/filiais/${filial.id}/editar|}">Editar</a> |
-                <a class="btn" th:href="@{|/filiais/${filial.id}/deletar|}">Excluir</a>
+                <a class="btn" th:href="@{|/filiais/${filial.id}/excluir|}">Excluir</a>
             </td>
         </tr>
         </tbody>
