--- a/src/main/resources/templates/patios/index.html
+++ b/src/main/resources/templates/patios/index.html
@@ -30,7 +30,7 @@
             <td th:text="${patio.comprimento}"></td>
             <td>
                 <a class="btn" th:href="@{|/patios/${patio.id}/editar|}">Editar</a> |
-                <a class="btn" th:href="@{|/patios/${patio.id}/deletar|}">Excluir</a>
+                <a class="btn" th:href="@{|/patios/${patio.id}/excluir|}">Excluir</a>
             </td>
         </tr>
         </tbody>
